GearsetPOC/force-app/main/default/objects/Metafour_Bike_Pricing__c/Metafour_Bike_Pricing__c.object-meta.xml
<CustomObject>
    <label>Pricing</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Metafour Pricing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>