GearsetPOC/force-app/main/default/objects/Metafour_Bike_Pricing__c/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <label>Account Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECC Boxed Bike Booking (or Bag)</fullName>
            </value>
            <value>
                <fullName>ECC Fully Assembled Bike Booking</fullName>
            </value>
            <value>
                <fullName>ECC LUGGAGE BOOKING</fullName>
            </value>
            <value>
                <fullName>ECC V.I.P. BAGGAGE ASISTANCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>