GearsetPOC/force-app/main/default/objects/Metafour_Bike_Pricing__c/fields/Before_Departure__c.field-meta.xml
<CustomField>
    <fullName>Before_Departure__c</fullName>
    <label>Before Departure</label>
    <length>50</length>
    <type>Text</type>
</CustomField>