GearsetPOC/force-app/main/default/objects/Metafour_Bike_Pricing__c/fields/From_Day__c.field-meta.xml
<CustomField>
    <fullName>From_Day__c</fullName>
    <label>From Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>