GearsetPOC/force-app/main/default/objects/Metafour_Bike_Pricing__c/fields/Price_in_GBP__c.field-meta.xml
<CustomField>
    <fullName>Price_in_GBP__c</fullName>
    <label>Price in GBP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>