GearsetPOC/force-app/main/default/objects/Metafour_Bike_Pricing__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boxed</fullName>
            </value>
            <value>
                <fullName>Assembled</fullName>
            </value>
            <value>
                <fullName>Luggage</fullName>
            </value>
            <value>
                <fullName>Excess Luggage &lt;85cm</fullName>
            </value>
            <value>
                <fullName>Excess Luggage &gt;85cm</fullName>
            </value>
            <value>
                <fullName>Group Luggage</fullName>
            </value>
            <value>
                <fullName>VIP Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>